--- a/debian/control
+++ b/debian/control
@@ -1,4 +1,4 @@
-Source: xubuntu-default-settings
+Source: pardus-xfce-default-settings
 Section: x11
 Priority: optional
 Maintainer: Xubuntu Developers <xubuntu-devel@lists.ubuntu.com>
@@ -15,12 +15,11 @@ Depends: ${misc:Depends}, xubuntu-artwork (>= 12.10.1~), fonts-noto-hinted,
  x11-common (>= 1:7.6+7ubuntu2), lightdm-gtk-greeter (>= 2.0.1-1),
  xfce4-session (>= 4.12.1-3ubuntu2~)
 Recommends: libxfce4ui-utils
-Breaks: upstart (<< 1.13.2-0ubuntu28~)
 Provides: lightdm-gtk-greeter-config
 Description: default settings for the Xubuntu desktop
  This package contains the default settings used by Xubuntu.
 
-Package: xubuntu-live-settings
+Package: pardus-xfce-live-settings
 Architecture: all
 Depends: ${misc:Depends}, casper, xubuntu-default-settings
 Description: configuration for the Xubuntu live cd
