--- a/debian/control
+++ b/debian/control
@@ -1,26 +1,25 @@
 Source: pardus-xfce-default-settings
-Section: x11
+Section: xfce
 Priority: optional
-Maintainer: Xubuntu Developers <xubuntu-devel@lists.ubuntu.com>
+Maintainer: Cihangir Akturk <cihangir@pardus.org.tr>,
+            Yusuf Düzgün <yusuf.duzgun@pardus.org.tr>
 Build-Depends: debhelper (>= 9), intltool
-Standards-Version: 3.9.6
-Homepage: https://launchpad.net/xubuntu-default-settings
-Vcs-Bzr: lp:xubuntu-default-settings
-Vcs-Browser: http://bazaar.launchpad.net/~xubuntu-dev/xubuntu-default-settings/trunk/files
+Standards-Version: 3.9.8
+Homepage: http://pardus.org.tr
 
-Package: xubuntu-default-settings
+Package: pardus-xfce-default-settings
 Architecture: all
 Pre-Depends: ${misc:Pre-Depends}
-Depends: ${misc:Depends}, xubuntu-artwork (>= 12.10.1~), fonts-noto-hinted,
- x11-common (>= 1:7.6+7ubuntu2), lightdm-gtk-greeter (>= 2.0.1-1),
- xfce4-session (>= 4.12.1-3ubuntu2~)
+Depends: ${misc:Depends}, pardus-xfce-icon-theme, greybird-gtk-theme,
+ x11-common (>= 1:7.6+7ubuntu2), lightdm-gtk-greeter (>= 1.2.1-1),
+ xfce4-session (>= 4.12.1-4)
 Recommends: libxfce4ui-utils
 Provides: lightdm-gtk-greeter-config
-Description: default settings for the Xubuntu desktop
- This package contains the default settings used by Xubuntu.
+Description: default settings for the Pardus desktop
+ This package contains the default settings used by Pardus.
 
 Package: pardus-xfce-live-settings
 Architecture: all
-Depends: ${misc:Depends}, casper, xubuntu-default-settings
-Description: configuration for the Xubuntu live cd
- This package contains live cd customizations used by Xubuntu.
+Depends: ${misc:Depends}, pardus-xfce-default-settings
+Description: configuration for the Paruds live cd
+ This package contains live cd customizations used by Pardus.
