--- a/usr/share/lightdm/lightdm-gtk-greeter.conf.d/30-pardus.conf
+++ b/usr/share/lightdm/lightdm-gtk-greeter.conf.d/30-pardus.conf
@@ -3,9 +3,9 @@
 #
 
 [greeter]
-background=/usr/share/plymouth/themes/xubuntu-logo/wallpaper.png
+background=/usr/share/images/desktop-base/login-background.svg
 theme-name=Greybird
-icon-theme-name=elementary-xfce-dark
-font-name=Noto Sans 9
+icon-theme-name=pardus-xfce-icon-theme-dark
+font-name=Sans Bold 10
 keyboard=onboard
 screensaver-timeout=60
