Update desktop entry name for session

--- a/usr/share/xsessions/pardus.desktop
+++ b/usr/share/xsessions/pardus.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
 Version=1.0
-Name=Xubuntu Session
+Name=Pardus Session
 Name[ast]=Sesión de Xubuntu
 Name[be]=Сэанс Xubuntu
 Name[bn]=Xubuntu সেশন
@@ -37,7 +37,7 @@ Name[sk]=Sedenie Xubuntu
 Name[sq]=Sesion Xubuntu
 Name[sv]=Xubuntu-session
 Name[te]=Xubuntu చర్యాకాలం
-Name[tr]=Xubuntu Oturumu
+Name[tr]=Pardus Oturumu
 Name[ug]=Xubuntu ئەڭگىمە
 Name[uk]=Сесія Xubuntu
 Name[zh_CN]=Xubuntu 会话
