--- a/debian/control
+++ b/debian/control
@@ -11,7 +11,7 @@ Package: pardus-xfce-default-settings
 Architecture: all
 Pre-Depends: ${misc:Pre-Depends}
 Depends: ${misc:Depends}, pardus-xfce-icon-theme, greybird-gtk-theme,
- x11-common (>= 1:7.6+7ubuntu2), lightdm-gtk-greeter (>= 1.2.1-1),
+ x11-common (>= 1:7.7+16), lightdm-gtk-greeter (>= 1.2.1-1),
  xfce4-session (>= 4.12.1-4)
 Recommends: libxfce4ui-utils
 Provides: lightdm-gtk-greeter-config
