Update usr directory and delete unneccessary files for pardus

--- a/usr/share/lightdm/lightdm-gtk-greeter.conf.d/30-pardus.conf
+++ b/usr/share/lightdm/lightdm-gtk-greeter.conf.d/30-pardus.conf
@@ -1,11 +1,8 @@
-# Xubuntu specific defaults
-# Settings stack on top of 01_ubuntu.conf
-#
-
+# Pardus specific defaults
 [greeter]
 background=/usr/share/images/desktop-base/login-background.svg
 theme-name=Greybird
 icon-theme-name=pardus-xfce-icon-theme-dark
 font-name=Sans Bold 10
-keyboard=onboard
+keyboard=
 screensaver-timeout=60
