--- a/debian/control
+++ b/debian/control
@@ -1,15 +1,14 @@
 Source: pardus-xfce-settings
 Section: xfce
 Priority: optional
-Maintainer: Cihangir Akturk <cihangir@pardus.org.tr>,
-            Yusuf Düzgün <yusuf.duzgun@pardus.org.tr>
+Maintainer: Yusuf Duzgun <yusuf.duzgun@pardus.org.tr>
 Build-Depends: debhelper (>= 9), intltool
 Standards-Version: 3.9.8
 Homepage: http://pardus.org.tr
 
 Package: pardus-xfce-settings
 Architecture: all
-Pre-Depends: ${misc:Pre-Depends}
+Pre-Depends: ${misc:Pre-Depends}, pardus-x11-settings
 Depends: ${misc:Depends}, pardus-xfce-icon-theme, greybird-gtk-theme,
  x11-common (>= 1:7.7+16), lightdm-gtk-greeter (>= 1.2.1-1),
  xfce4-session (>= 4.12.1-4)
