--- a/usr/share/lightdm/lightdm-gtk-greeter.conf.d/30-pardus.conf
+++ b/usr/share/lightdm/lightdm-gtk-greeter.conf.d/30-pardus.conf
@@ -1,8 +1,8 @@
 # Pardus specific defaults
 [greeter]
 background=/usr/share/images/desktop-base/login-background.svg
-theme-name=Greybird
+theme-name=Arc-Darker
 icon-theme-name=pardus-xfce-icon-theme-dark
-font-name=Sans Bold 10
+font-name=Sans 10
 keyboard=
 screensaver-timeout=60
