Use pardus-icon-theme instead pardus-xfce-icon-theme
Signed-off-by: Yunusemre Şentürk <yunusemre.senturk@pardus.org.tr>

--- a/usr/share/lightdm/lightdm-gtk-greeter.conf.d/30-pardus.conf
+++ b/usr/share/lightdm/lightdm-gtk-greeter.conf.d/30-pardus.conf
@@ -2,7 +2,7 @@
 [greeter]
 background=/usr/share/images/desktop-base/login-background.svg
 theme-name=Arc-Darker
-icon-theme-name=pardus-xfce-icon-theme-dark
+icon-theme-name=pardus
 font-name=Sans 10
 keyboard=
 screensaver-timeout=60
