--- a/debian/control
+++ b/debian/control
@@ -13,7 +13,7 @@ Depends: ${misc:Depends},
  arc-theme,
  libreoffice-style-colibre,
  lightdm-gtk-greeter (>= 1.2.1-1), 
- pardus-xfce-icon-theme,
+ pardus-icon-theme,
  x11-common (>= 1:7.7+16),
  xfce4-session (>= 4.12.1-4),
  xfconf
