--- a/etc/xdg/pardus/xfce4/whiskermenu/defaults.rc
+++ b/etc/xdg/pardus/xfce4/whiskermenu/defaults.rc
@@ -22,6 +22,7 @@ command-lockscreen=xflock4
 show-command-lockscreen=true
 command-logout=xfce4-session-logout
 show-command-logout=true
+position-categories-alternate=true
 
 [action0]
 name=Man Pages
@@ -52,4 +53,3 @@ name=Search for files
 pattern=find
 command=catfish %s --start
 regex=false
-
