--- a/usr/share/lightdm/lightdm-gtk-greeter.conf.d/30-pardus.conf
+++ b/usr/share/lightdm/lightdm-gtk-greeter.conf.d/30-pardus.conf
@@ -1,8 +1,8 @@
 # Pardus specific defaults
 [greeter]
 background=/usr/share/images/desktop-base/login-background.svg
-theme-name=Arc-Darker
-icon-theme-name=pardus
-font-name=Sans 10
-keyboard=
-screensaver-timeout=60
+theme-name=Adwaita
+icon-theme-name=elementary Xfce
+xft-antialias=true
+xft-hintstyle=hintfull
+xft-rgba=rgb
