--- a/etc/xdg/pardus/xfce4/whiskermenu/defaults.rc
+++ b/etc/xdg/pardus/xfce4/whiskermenu/defaults.rc
@@ -1,4 +1,4 @@
-favorites=exo-web-browser.desktop,exo-mail-reader.desktop,exo-file-manager.desktop,libreoffice-writer.desktop,libreoffice-calc.desktop,pidgin.desktop,org.gnome.Software.desktop,exo-terminal-emulator.desktop,pardus-store.desktop,debian-installer-launcher.desktop
+favorites=exo-web-browser.desktop,exo-mail-reader.desktop,exo-file-manager.desktop,libreoffice-writer.desktop,libreoffice-calc.desktop,org.gnome.Software.desktop,exo-terminal-emulator.desktop
 button-title=Applications Menu
 button-icon=emblem-pardus
 show-button-title=false
@@ -7,7 +7,7 @@ load-hierarchy=true
 launcher-show-name=true
 launcher-show-description=false
 item-icon-size=2
-category-icon-size=0
+category-icon-size=1
 hover-switch-category=false
 favorites-in-recent=true
 display-recent-default=false
