--- a/usr/share/lightdm/lightdm-gtk-greeter.conf.d/30-pardus.conf
+++ b/usr/share/lightdm/lightdm-gtk-greeter.conf.d/30-pardus.conf
@@ -1,7 +1,7 @@
 # Pardus specific defaults
 [greeter]
 background=/usr/share/images/desktop-base/login-background.svg
-theme-name=Adapta-Blue
+theme-name=Greybird
 icon-theme-name=Papirus
 xft-antialias=true
 xft-hintstyle=hintfull
