--- a/etc/xdg/pardus/xfce4/whiskermenu/defaults.rc
+++ b/etc/xdg/pardus/xfce4/whiskermenu/defaults.rc
@@ -1,7 +1,8 @@
 favorites=exo-web-browser.desktop,exo-mail-reader.desktop,exo-file-manager.desktop,libreoffice-writer.desktop,libreoffice-calc.desktop,org.gnome.Software.desktop,exo-terminal-emulator.desktop
 button-title=Applications Menu
 button-icon=emblem-pardus
-show-button-title=false
+show-button-title=true
+button-title=Pardus
 show-button-icon=true
 load-hierarchy=true
 launcher-show-name=true
