Change pardus default theme to adapta-blue-eta with pardus-icons
Signed-off-by: Fatih Altun <fatih.altun@pardus.org.tr>

--- a/debian/control
+++ b/debian/control
@@ -10,9 +10,9 @@ Package: pardus-xfce-settings
 Architecture: all
 Pre-Depends: ${misc:Pre-Depends}, pardus-x11-settings
 Depends: ${misc:Depends},
- papirus-icon-theme,
+ pardus-icon-theme,
  lightdm-gtk-greeter, 
- greybird-gtk-theme,
+ adapta-gtk-theme-colorpack,
  x11-common,
  xfce4-session,
  xfconf
