--- a/usr/share/lightdm/lightdm-gtk-greeter.conf.d/30-pardus.conf
+++ b/usr/share/lightdm/lightdm-gtk-greeter.conf.d/30-pardus.conf
@@ -1,8 +1,8 @@
 # Pardus specific defaults
 [greeter]
 background=/usr/share/images/desktop-base/login-background.svg
-theme-name=Greybird
-icon-theme-name=Papirus
+theme-name=Adapta-Blue-Eta
+icon-theme-name=pardus
 xft-antialias=true
 xft-hintstyle=hintfull
 xft-rgba=rgb
