--- a/etc/xdg/pardus/xfce4/whiskermenu/defaults.rc
+++ b/etc/xdg/pardus/xfce4/whiskermenu/defaults.rc
@@ -1,4 +1,4 @@
-favorites=exo-web-browser.desktop,exo-mail-reader.desktop,exo-file-manager.desktop,libreoffice-writer.desktop,libreoffice-calc.desktop,org.gnome.Software.desktop,exo-terminal-emulator.desktop,pardus-store.desktop
+favorites=exo-web-browser.desktop,exo-mail-reader.desktop,exo-file-manager.desktop,libreoffice-writer.desktop,libreoffice-calc.desktop,org.gnome.Software.desktop,exo-terminal-emulator.desktop,tr.org.pardus.software.desktop,pardus-store.desktop
 button-title=Applications Menu
 button-icon=emblem-pardus
 show-button-title=true
