Update whiskermenu defauls, use show as list

--- a/etc/xdg/pardus/xfce4/whiskermenu/defaults.rc
+++ b/etc/xdg/pardus/xfce4/whiskermenu/defaults.rc
@@ -4,7 +4,8 @@ button-icon=emblem-pardus
 show-button-title=true
 button-title=Pardus
 show-button-icon=true
-load-hierarchy=true
+load-hierarchy=false
+view-as-icons=false
 launcher-show-name=true
 launcher-show-description=false
 item-icon-size=2
