--- a/etc/xdg/pardus/xfce4/panel/datetime-8.rc
+++ b/etc/xdg/pardus/xfce4/panel/datetime-8.rc
@@ -1,5 +1,5 @@
 layout=3
 date_font=Sans Bold 11
-time_font=Sans Bold 13
+time_font=Quicksand Medium, Bold 16
 date_format=%Y-%m-%d
 time_format=%H:%M
