--- a/usr/share/lightdm/lightdm-gtk-greeter.conf.d/30-pardus.conf
+++ b/usr/share/lightdm/lightdm-gtk-greeter.conf.d/30-pardus.conf
@@ -1,8 +1,9 @@
 # Pardus specific defaults
 [greeter]
+indicators = ~~;~host;~spacer;~clock;~spacer;~language;~session;~a11y;~power;~~
 background=/usr/share/images/desktop-base/login-background.svg
-theme-name=pardus
-icon-theme-name=pardus
+theme-name=pardus-dark
+icon-theme-name=pardus-dark
 xft-antialias=true
 xft-hintstyle=hintfull
 xft-rgba=rgb
