--- a/etc/xdg/pardus/Thunar/uca.xml.in
+++ b/etc/xdg/pardus/Thunar/uca.xml.in
@@ -41,4 +41,15 @@
     <directories/>
   </action>
 
+  <action>
+    <icon>document-print</icon>
+    <_name>Print file(s)</_name>
+    <command>thunar-print %F</command>
+    <_description>Send one or multiple files to the default printer</_description>
+    <patterns>*.asc;*.brf;*.css;*.csv;*.doc;*.docm;*.docx;*.dotm;*.dotx;*.fodg;*.fodp;*.fods;*.fodt;*.gif;*.htm;*.html;*.jpe;*.jpeg;*.jpg;*.log;*.odb;*.odf;*.odg;*.odm;*.odp;*.ods;*.odt;*.otg;*.oth;*.otp;*.ots;*.ott;*.pbm;*.pdf;*.pgm;*.png;*.pnm;*.po;*.pot;*.potm;*.potx;*.ppm;*.ppt;*.pptm;*.pptx;*.rtf;*.shtml;*.srt;*.text;*.tif;*.tiff;*.txt;*.xbm;*.xls;*.xlsb;*.xlsm;*.xlsx;*.xltm;*.xltx;*.xpm;*.xwd</patterns>
+    <image-files/>
+    <other-files/>
+    <text-files/>
+  </action>
+
 </actions>
