Add space to whiskermenu text

--- a/etc/xdg/pardus/xfce4/whiskermenu/defaults.rc
+++ b/etc/xdg/pardus/xfce4/whiskermenu/defaults.rc
@@ -2,7 +2,7 @@ favorites=exo-web-browser.desktop,exo-mail-reader.desktop,exo-file-manager.deskt
 button-title=Applications Menu
 button-icon=start-pardus
 show-button-title=true
-button-title=Pardus
+button-title=Pardus\ 
 show-button-icon=true
 load-hierarchy=false
 view-as-icons=false
