--- a/debian/control
+++ b/debian/control
@@ -10,6 +10,7 @@ Package: pardus-xfce-settings
 Architecture: all
 Depends: ${misc:Depends},
  dbus-x11,
+ fonts-ubuntu,
  lightdm-gtk-greeter,
  x11-common,
  xfce4-session,
